update - social - fix Missing border of Search field, missing tick icon #ref WTHZONE-914

--- a/src/social/shared/second-routes/post/post-edit.component.scss
+++ b/src/social/shared/second-routes/post/post-edit.component.scss
@@ -18,6 +18,8 @@
 }
 
 .dropdown-menu {
+  min-width: 190px;
+  
   li {
     span {
       padding: 10px 15px;
